Removed the OMP package from the package reproducer script.

--- a/themes/.themes/JQN-Mono/gtk-3.0/gtk-dark.css
+++ b/themes/.themes/JQN-Mono/gtk-3.0/gtk-dark.css
@@ -10492,7 +10492,7 @@ tooltip.background.chromium {
 
 
 #MozillaGtkWidget {
-    background-color: #333333;
+    background-color: #252525;
 }
 
 #MozillaGtkWidget.background button {
@@ -10510,7 +10510,7 @@ tooltip.background.chromium {
 }
 
 #MozillaGtkWidget>widget border {
-    border-color: #1b82b3;
+    border-color: #606060;
 }
 
 #MozillaGtkWidget>widget>scrolledwindow>textview text:selected,
