Actually changed to sizes of waybar icons to 15.5/16pt.

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -76,7 +76,7 @@ window#waybar {
 
 /* Battery Module */
 #battery {
-    padding-right: 15.5pt;
-    font-size: 20px;
+    padding-right: 16px;
+    font-size: 15.5pt;
     color: @green
 }
