--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -6,5 +6,6 @@
 @define-color red        #865054;
 @define-color green      #5f7a5f;
 @define-color blue       #5f7a8c;
+@define-color cyan       #6a8b8b;
 @define-color yellow     #a4965f;
 @define-color lime       #7a9e34; 
