--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -19,7 +19,7 @@ window#waybar {
 
 /* Workspace Buttons */
 #workspaces {
-    padding-left: 2px
+    padding-left: 4px
 }
 
 #workspaces button {
@@ -27,7 +27,6 @@ window#waybar {
     padding: 0 7px;
     background: transparent;
     color: @inactive;
-    font-weight: 400;
     transition: color 0.3s ease;
 }
 
@@ -49,13 +48,19 @@ window#waybar {
 /* Network Module */
 #network {
     font-size: 15.5pt;
-    padding-right: 23px;
-    color: @blue
+    padding-right: 22px;
+    color: @cyan
+}
+
+#bluetooth {
+    font-size: 15.25pt;
+    padding-right: 15.5px;
+    color: @blue;
 }
 
 /* Pulseaudio Module */
 #pulseaudio {
-    font-size: 16pt;
+    font-size: 15.5pt;
     padding-right: 20px;
     color: @yellow
 }
@@ -69,14 +74,14 @@ window#waybar {
 /* Custom Power Module */
 #custom-power {
     padding-right: 16px;
-    padding-left: 10px;
+    padding-left: 12px;
     font-size: 22.5px;
     color: @red
 }
 
 /* Battery Module */
 #battery {
-    padding-right: 12px;
+    padding-right: 12.5px;
     font-size: 15.5pt;
     color: @green
 }
