--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -16,20 +16,20 @@ window#waybar {
 #system {
     background: @bg;
     border-radius: 7px;
-    border: 2px solid #454545
+    border: 2px solid #454545;
 }
 
 #workspaces {
     background: @bg;
     border: 2px solid #454545;
     border-radius: 7px;
-    padding-left: 3px;
-    padding-right: 3px
+    padding-left: 4px;
+    padding-right: 4px
 }
 
 #workspaces button {
     min-width: 14px;
-    padding: 0 7px;
+    padding: 0 6px;
     color: @inactive;
     transition: color 0.3s ease;
 }
@@ -45,12 +45,8 @@ window#waybar {
     background: transparent
 }
 
-#window {
-    background-color: #161616;
-}
-
 #tray {
-    padding-right: 12px;
+    padding-right: 8px;
 }
 
 #network {
@@ -83,15 +79,15 @@ window#waybar {
 #custom-power {
     background-color: @red;
     color: @bg;
-    padding-right: 12px;
-    padding-left: 10px;
+    padding-right: 10px;
+    padding-left: 8px;
     font-size: 22px;
     border: 2px solid #4e3335;
-    border-radius: 8px
+    border-radius: 7px
 }
 
 #battery {
-    padding-right: 12.5px;
+    padding-right: 13px;
     font-size: 15.5pt;
     color: @green
 }
