--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,8 +1,8 @@
 @import url("./colors.css");
 
 * {
-    font-family: "Rubik", "JetBrainsMono Nerd Font";
-    font-size: 14.5pt;
+    font-family: "Rubik";
+    font-size: 14pt;
     font-weight: 400;
 }
 
@@ -21,7 +21,7 @@ window#waybar {
 #system {
     background: @bg;
     border-radius: 7px;
-    border: 2px solid @inactive;
+    border: 2px solid @inactive
 }
 
 #workspaces {
@@ -57,19 +57,19 @@ window#waybar {
 
 #network {
     padding-left: 11px;
-    font-size: 15pt;
+    font-size: 14.25pt;
     padding-right: 22px;
     color: @cyan
 }
 
 #bluetooth {
-    font-size: 15pt;
+    font-size: 14.25pt;
     padding-right: 16px;
     color: @blue;
 }
 
 #pulseaudio {
-    font-size: 15pt;
+    font-size: 14.25pt;
     padding-right: 20px;
     color: @yellow
 }
@@ -87,13 +87,13 @@ window#waybar {
     color: @bg;
     padding-right: 11px;
     padding-left: 9px;
-    font-size: 15pt;
+    font-size: 14.25pt;
     border: 2px solid #4e3335;
     border-radius: 7px
 }
 
 #battery {
     padding-right: 12px;
-    font-size: 15pt;
+    font-size: 14.25pt;
     color: @green
 }
