Added hover colors on workspaces in waybar.

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -44,7 +44,7 @@ window#waybar {
 }
 
 #workspaces button:hover {
-    color: @fg-darker;
+    color: #757575;
     box-shadow: inherit;
     text-shadow: inherit;
     background: transparent
