--- a/themes/.themes/jqnMono/gtk-3.0/gtk-dark.css
+++ b/themes/.themes/jqnMono/gtk-3.0/gtk-dark.css
@@ -12,7 +12,7 @@
 
 .background:backdrop {
     color: rgba(255, 255, 255, 0.5);
-    background-color: #1f1f1f;
+    background-color: #1c1c1c;
     transition: 0ms;
 }
 
@@ -146,7 +146,7 @@ window.devel headerbar.titlebar:not(.selection-mode) {
 }
 
 window.devel headerbar.titlebar:not(.selection-mode):backdrop {
-    background: #1f1f1f;
+    background: #1c1c1c;
 }
 
 window.flat headerbar {
@@ -652,7 +652,7 @@ iconview:backdrop,
 iconview text:backdrop,
 textview text:backdrop {
     color: rgba(255, 255, 255, 0.5);
-    background-color: #1f1f1f;
+    background-color: #1c1c1c;
 }
 
 .view:backdrop:disabled,
@@ -2233,7 +2233,7 @@ messagedialog.csd.background {
 
 messagedialog .titlebar:backdrop,
 messagedialog.csd.background:backdrop {
-    background-color: #1f1f1f;
+    background-color: #1c1c1c;
     color: rgba(255, 255, 255, 0.5);
 }
 
@@ -3835,7 +3835,7 @@ headerbar {
 
 .titlebar:backdrop:not(headerbar),
 headerbar:backdrop {
-    background: #1f1f1f;
+    background: #1c1c1c;
     background-image: none;
     transition: 0ms;
 }
@@ -9784,7 +9784,7 @@ headerbar.selection-mode button.titlebutton:backdrop,
 
 .terminal:backdrop,
 .terminal text:backdrop {
-    background-color: #1f1f1f;
+    background-color: #1c1c1c;
     color: white;
 }
 
