--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -1,4 +1,4 @@
-@define-color bg         #1c1c1c;
+@define-color bg         #1e1e20;
 @define-color fg         #eeeeee;
 @define-color inactive   #404040; 
 @define-color red        #865054;
