--- a/themes/.themes/jqnMono/gtk-3.0/gtk-dark.css
+++ b/themes/.themes/jqnMono/gtk-3.0/gtk-dark.css
@@ -6,13 +6,13 @@
 
 .background {
     color: white;
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
     transition: 0ms;
 }
 
 .background:backdrop {
     color: rgba(255, 255, 255, 0.5);
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
     transition: 0ms;
 }
 
@@ -142,11 +142,11 @@ window.csd>.titlebar:not(headerbar) {
 }
 
 window.devel headerbar.titlebar:not(.selection-mode) {
-    background: #1c1c1c;
+    background: #1e1e20;
 }
 
 window.devel headerbar.titlebar:not(.selection-mode):backdrop {
-    background: #1c1c1c;
+    background: #1e1e20;
 }
 
 window.flat headerbar {
@@ -640,7 +640,7 @@ iconview,
 iconview text,
 textview text {
     color: white;
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
 }
 
 .view:backdrop,
@@ -652,7 +652,7 @@ iconview:backdrop,
 iconview text:backdrop,
 textview text:backdrop {
     color: rgba(255, 255, 255, 0.5);
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
 }
 
 .view:backdrop:disabled,
@@ -675,7 +675,7 @@ iconview:disabled,
 iconview text:disabled,
 textview text:disabled {
     color: rgba(255, 255, 255, 0.5);
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
 }
 
 .view:selected:focus,
@@ -1887,7 +1887,7 @@ scrolledwindow junction {
     border-style: solid none none solid;
     border-width: 1px;
     border-color: rgba(255, 255, 255, 0.1);
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
 }
 
 scrolledwindow junction:dir(rtl) {
@@ -1895,7 +1895,7 @@ scrolledwindow junction:dir(rtl) {
 }
 
 scrolledwindow junction:backdrop {
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
     transition: 200ms ease-out;
 }
 
@@ -2214,7 +2214,7 @@ messagedialog.csd .titlebar,
 messagedialog.csd.background {
     border-radius: 0px;
     min-height: 28px;
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
 }
 
 messagedialog.csd .titlebar {
@@ -2233,7 +2233,7 @@ messagedialog.csd.background {
 
 messagedialog .titlebar:backdrop,
 messagedialog.csd.background:backdrop {
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
     color: rgba(255, 255, 255, 0.5);
 }
 
@@ -3827,7 +3827,7 @@ popover.combo list>row:not(:last-child) {
 headerbar {
     padding: 0 6px;
     min-height: 46px;
-    background: #1c1c1c;
+    background: #1e1e20;
     padding-left: 10px;
     padding-right: 15px;
     transition: 0ms;
@@ -3835,7 +3835,7 @@ headerbar {
 
 .titlebar:backdrop:not(headerbar),
 headerbar:backdrop {
-    background: #1c1c1c;
+    background: #1e1e20;
     background-image: none;
     transition: 0ms;
 }
@@ -5172,7 +5172,7 @@ colorswatch.light {
 }
 
 colorswatch.light overlay {
-    color: #1c1c1c;
+    color: #1e1e20;
 }
 
 colorswatch.light overlay:hover {
@@ -5180,7 +5180,7 @@ colorswatch.light overlay:hover {
 }
 
 colorswatch.light overlay:backdrop {
-    color: #1c1c1c;
+    color: #1e1e20;
 }
 
 colorswatch:drop(active) {
@@ -8435,19 +8435,19 @@ tabbar undershoot {
 }
 
 tabbar undershoot.left {
-    background: linear-gradient(to right, #1c1c1c, transparent 20px);
+    background: linear-gradient(to right, #1e1e20, transparent 20px);
 }
 
 tabbar undershoot.right {
-    background: linear-gradient(to left, #1c1c1c, transparent 20px);
+    background: linear-gradient(to left, #1e1e20, transparent 20px);
 }
 
 tabbar .needs-attention-left undershoot.left {
-    background: linear-gradient(to right, #1c1c1c, transparent 20px);
+    background: linear-gradient(to right, #1e1e20, transparent 20px);
 }
 
 tabbar .needs-attention-right undershoot.right {
-    background: linear-gradient(to left, #1c1c1c, transparent 20px);
+    background: linear-gradient(to left, #1e1e20, transparent 20px);
 }
 
 tabbar tab {
@@ -9672,13 +9672,13 @@ button.titlebutton:not(.suggested-action):not(.destructive-action) {
 button.close.titlebutton:hover:not(.suggested-action):not(.destructive-action) {
     background-image: none;
     background-color: #ed5f5d;
-    color: #1c1c1c;
+    color: #1e1e20;
 }
 
 button.close.titlebutton:active:not(.suggested-action):not(.destructive-action) {
     background-image: none;
     background-color: #cf5251;
-    color: #1c1c1c;
+    color: #1e1e20;
 }
 
 button.minimize.titlebutton:hover:not(.suggested-action):not(.destructive-action),
@@ -9771,7 +9771,7 @@ headerbar.selection-mode button.titlebutton:backdrop,
 
 .terminal,
 .terminal text {
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
     color: white;
     font-family: monospace;
 }
@@ -9784,7 +9784,7 @@ headerbar.selection-mode button.titlebutton:backdrop,
 
 .terminal:backdrop,
 .terminal text:backdrop {
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
     color: white;
 }
 
@@ -9794,12 +9794,12 @@ headerbar.selection-mode button.titlebutton:backdrop,
 
 
 .terminator-terminal-window paned>separator {
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
 }
 
 .terminator-terminal-window notebook.frame {
-    border: 1px solid #1c1c1c;
-    background-color: #1c1c1c;
+    border: 1px solid #1e1e20;
+    background-color: #1e1e20;
 }
 
 
@@ -10428,12 +10428,12 @@ XfdesktopIconView.view .rubberband {
 
 
 window.background.chromium {
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
 }
 
 window.background.chromium entry,
 window.background.chromium>button {
-    border: 1px solid #1c1c1c;
+    border: 1px solid #1e1e20;
 }
 
 window.background.chromium>button {
@@ -10478,7 +10478,7 @@ window.background.chromium treeview.view.cell:selected:focus {
 
 window.background.chromium treeview.view button {
     border: 1px solid rgba(255, 255, 255, 0.1);
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
 }
 
 tooltip.background.chromium {
@@ -10506,7 +10506,7 @@ tooltip.background.chromium {
 }
 
 #MozillaGtkWidget.background {
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
 }
 
 #MozillaGtkWidget>widget border {
@@ -10650,7 +10650,7 @@ window.background.caja-navigation-window #Toolbar:backdrop {
 
 
 geary-conversation-viewer#conversation_viewer list.background.conversation-listbox.content {
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
     border: none;
     border-radius: 0;
 }
@@ -10746,7 +10746,7 @@ geary-conversation-viewer#conversation_viewer searchbar>revealer>box {
 }
 
 .deck {
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
 }
 
 .overlay-bar {
@@ -10771,7 +10771,7 @@ button .download_progress trough {
 }
 
 window#guake-terminal notebook header {
-    background: #1c1c1c;
+    background: #1e1e20;
 }
 
 GraniteWidgetsPopOver {
@@ -10781,7 +10781,7 @@ GraniteWidgetsPopOver {
     -GraniteWidgetsPopOver-border-width: 0;
     -GraniteWidgetsPopOver-shadow-size: 12;
     border: 1px solid rgba(255, 255, 255, 0.1);
-    background: #1c1c1c;
+    background: #1e1e20;
     color: white;
 }
 
@@ -10848,7 +10848,7 @@ terminal-window notebook scrollbar slider {
 }
 
 #Return {
-    background: #1c1c1c;
+    background: #1e1e20;
     color: white;
 }
 
@@ -10863,7 +10863,7 @@ terminal-window notebook scrollbar slider {
 
 sq_view {
     font-size: 1.5em;
-    background-color: #1c1c1c;
+    background-color: #1e1e20;
     box-shadow: none;
 }
 
@@ -10924,7 +10924,7 @@ sq_button.small {
 @define-color borders rgba(255, 255, 255, 0.1);
 
 /*bg of terminal*/
-@define-color text_view_bg #1c1c1c;
+@define-color text_view_bg #1e1e20;
 
 /*text color in terminal*/
 @define-color theme_text_color white;
@@ -10933,12 +10933,12 @@ sq_button.small {
 @define-color theme_base_color rgba(255, 255, 255, 0.05);
 
 /*terminator*/
-@define-color window_bg_color #1c1c1c;
-@define-color theme_bg_color #1c1c1c;
+@define-color window_bg_color #1e1e20;
+@define-color theme_bg_color #1e1e20;
 
 /*evolution*/
 @define-color theme_fg_color white;
-@define-color theme_base_color #1c1c1c;
+@define-color theme_base_color #1e1e20;
 
 /*bg of selections*/
 @define-color theme_selected_bg_color #1b82b3;
