Added an even bigger border radius around the waybar modules.

--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -6,4 +6,4 @@
 @define-color blue       #5f7a8c;
 @define-color cyan       #6a8b8b;
 @define-color yellow     #a4965f;
-@define-color lime       #7a9e34; 
+@define-color lime       #7a8a4f; 
