--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -20,16 +20,16 @@ window#waybar {
 
 #system {
     background: @bg;
-    border-radius: 7px;
+    border-radius: 24px;
     border: 2px solid @inactive
 }
 
 #workspaces {
     background: @bg;
     border: 2px solid @inactive;
-    border-radius: 7px;
-    padding-left: 4px;
-    padding-right: 4px
+    border-radius: 24px;
+    padding-left: 6px;
+    padding-right: 6px
 }
 
 #workspaces button {
@@ -56,7 +56,7 @@ window#waybar {
 }
 
 #network {
-    padding-left: 11px;
+    padding-left: 13px;
     font-size: 13.75pt;
     padding-right: 22px;
     color: @cyan
@@ -77,23 +77,23 @@ window#waybar {
 #clock {
     background: @bg;
     border: 2px solid @inactive;
-    border-radius: 7px;
-    padding-right: 10px;
-    padding-left: 10px
+    border-radius: 24px;
+    padding-right: 12px;
+    padding-left: 12px
 }
 
 #custom-power {
     background-color: @red;
     color: @bg;
-    padding-right: 11px;
-    padding-left: 9px;
+    border: 2px solid #573437;       /* Match background to prevent bleed */
+    border-radius: 100%;  
+    padding-right: 10px;
+    padding-left: 8px;
     font-size: 13.75pt;
-    border: 2px solid #4e3335;
-    border-radius: 7px
 }
 
 #battery {
-    padding-right: 12px;
+    padding-right: 14px;
     font-size: 13.75pt;
     color: @green
 }
