--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -20,15 +20,15 @@ window#waybar {
 
 #system {
     background: @bg;
-    border-radius: 10px;
+    border-radius: 18px;
     border: 2px solid @inactive
 }
 
 #workspaces {
     background: @bg;
     border: 2px solid @inactive;
-    border-radius: 10px;
-    padding: 0 5 0 5px;
+    border-radius: 18px;
+    padding: 0 8 0 8px;
 }
 
 #workspaces button {
@@ -56,7 +56,7 @@ window#waybar {
 
 #network {
     padding-right: 22px;
-    padding-left: 13px;
+    padding-left: 11px;
     font-size: 13.75pt;
     color: @cyan
 }
@@ -76,15 +76,15 @@ window#waybar {
 #clock {
     background: @bg;
     border: 2px solid @inactive;
-    border-radius: 10px;
-    padding-right: 10px;
-    padding-left: 10px
+    border-radius: 18px;
+    padding-right: 12px;
+    padding-left: 12px
 }
 
 #custom-power {
     background-color: @red;
     color: @bg;
-    border: 2px solid #573437;       /* Match background to prevent bleed */
+    border: 2px solid #573437;
     border-radius: 100%;  
     padding-right: 10px;
     padding-left: 8px;
@@ -92,7 +92,7 @@ window#waybar {
 }
 
 #battery {
-    padding-right: 14px;
+    padding-right: 12px;
     font-size: 13.75pt;
     color: @green
 }
