--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -1,6 +1,6 @@
 @define-color bg         #1e1e20;
 @define-color fg         #eeeeee;
-@define-color inactive   #404040; 
+@define-color inactive   #3f4044; 
 @define-color red        #865054;
 @define-color green      #5f7a5f;
 @define-color blue       #5f7a8c;
