--- a/themes/.themes/Adwaita-Mono/gtk-3.0/gtk-dark.css
+++ b/themes/.themes/Adwaita-Mono/gtk-3.0/gtk-dark.css
@@ -1,58 +1,101 @@
-/* GTK NAMED COLORS ---------------- use responsibly! */
+@define-color blue_1 #99c1f1;
+@define-color blue_2 #62a0ea;
+@define-color blue_3 #3584e4;
+@define-color blue_4 #1c71d8;
+@define-color blue_5 #1a5fb4;
+@define-color green_1 #8ff0a4;
+@define-color green_2 #57e389;
+@define-color green_3 #33d17a;
+@define-color green_4 #2ec27e;
+@define-color green_5 #26a269;
+@define-color yellow_1 #f9f06b;
+@define-color yellow_2 #f8e45c;
+@define-color yellow_3 #f6d32d;
+@define-color yellow_4 #f5c211;
+@define-color yellow_5 #e5a50a;
+@define-color orange_1 #ffbe6f;
+@define-color orange_2 #ffa348;
+@define-color orange_3 #ff7800;
+@define-color orange_4 #e66100;
+@define-color orange_5 #c64600;
+@define-color red_1 #f66151;
+@define-color red_2 #ed333b;
+@define-color red_3 #e01b24;
+@define-color red_4 #c01c28;
+@define-color red_5 #a51d2d;
+@define-color purple_1 #dc8add;
+@define-color purple_2 #c061cb;
+@define-color purple_3 #9141ac;
+@define-color purple_4 #813d9c;
+@define-color purple_5 #613583;
+@define-color brown_1 #cdab8f;
+@define-color brown_2 #b5835a;
+@define-color brown_3 #986a44;
+@define-color brown_4 #865e3c;
+@define-color brown_5 #63452c;
+@define-color light_1 #ffffff;
+@define-color light_2 #f6f5f4;
+@define-color light_3 #deddda;
+@define-color light_4 #c0bfbc;
+@define-color light_5 #9a9996;
+@define-color dark_1 #77767b;
+@define-color dark_2 #5e5c64;
+@define-color dark_3 #3d3846;
+@define-color dark_4 #241f31;
+@define-color dark_5 #000000;
+@define-color accent_bg_color @blue_3;
+@define-color accent_fg_color white;
+@define-color accent_color #78aeed;
 @define-color destructive_bg_color @red_4;
 @define-color destructive_fg_color white;
+@define-color destructive_color #ff7b63;
 @define-color success_bg_color @green_5;
 @define-color success_fg_color white;
-@define-color warning_bg_color #b9860b;
+@define-color success_color @green_1;
+@define-color warning_bg_color #cd9309;
 @define-color warning_fg_color rgba(0, 0, 0, 0.8);
+@define-color warning_color @yellow_2;
 @define-color error_bg_color @red_4;
 @define-color error_fg_color white;
+@define-color error_color #ff7b63;
 
-@define-color accent_color oklab(from @accent_bg_color max(l, 0.85) a b);
-@define-color destructive_color oklab(from @destructive_bg_color max(l, 0.85) a b);
-@define-color success_color oklab(from @success_bg_color max(l, 0.85) a b);
-@define-color warning_color oklab(from @warning_bg_color max(l, 0.85) a b);
-@define-color error_color oklab(from @error_bg_color max(l, 0.85) a b);
-
-/* Updated to use #1e1e20 base and harmonized tones */
 @define-color window_bg_color #1e1e20;
 @define-color window_fg_color white;
 @define-color view_bg_color #1e1e20;
 @define-color view_fg_color white;
+
 @define-color headerbar_bg_color #1e1e20;
-@define-color headerbar_fg_color white;
+@define-color headerbar_fg_color #1e1e20;
 @define-color headerbar_border_color #1e1e20;
-@define-color headerbar_backdrop_color @window_bg_color;
+@define-color headerbar_backdrop_color #1e1e20;
 @define-color headerbar_shade_color #1e1e20;
 @define-color headerbar_darker_shade_color #1e1e20;
 
-@define-color sidebar_bg_color #3f4044;
+@define-color sidebar_bg_color #1e1e20;
 @define-color sidebar_fg_color white;
-@define-color sidebar_backdrop_color #202022;
-@define-color sidebar_shade_color #1e1e20;
-@define-color sidebar_border_color #1e1e20);
+@define-color sidebar_backdrop_color #1e1e20;
+@define-color sidebar_shade_color rgba(0, 0, 6, 0.25);
+@define-color sidebar_border_color rgba(0, 0, 6, 0.36);
 
-@define-color secondary_sidebar_bg_color #222224;
-@define-color secondary_sidebar_fg_color white;
-@define-color secondary_sidebar_backdrop_color #1f1f21;
-@define-color secondary_sidebar_shade_color #1e1e20;
-@define-color secondary_sidebar_border_color #1e1e20);
-
-@define-color card_bg_color #3f4044;
+@define-color card_bg_color rgba(255, 255, 255, 0.08);
 @define-color card_fg_color white;
-@define-color card_shade_color #1e1e20);
+@define-color card_shade_color rgba(0, 0, 6, 0.36);
 
-@define-color dialog_bg_color #2a2a2d;
+@define-color dialog_bg_color #1e1e20;
 @define-color dialog_fg_color white;
-@define-color popover_bg_color #2a2a2d;
-@define-color popover_fg_color white;
-@define-color popover_shade_color #1e1e20;
 
-@define-color thumbnail_bg_color #2d2d30;
+@define-color popover_bg_color #1e1e20;
+@define-color popover_fg_color white;
+@define-color popover_shade_color rgba(0, 0, 6, 0.25);
+
+@define-color thumbnail_bg_color #1e1e20;
 @define-color thumbnail_fg_color white;
 
-@define-color shade_color #1e1e20;
-@define-color scrollbar_outline_color rgba(0, 0, 12, 0.9);
+@define-color shade_color rgba(0, 0, 6, 0.25);
+@define-color scrollbar_outline_color rgba(0, 0, 12, 0.95);
+
+@define-color incognito_bg_color #1c2438;
+@define-color new_title_bg_color #303030;
 * { padding: 0; -GtkToolButton-icon-spacing: 4; -GtkTextView-error-underline-color: @error_bg_color; -GtkScrolledWindow-scrollbar-spacing: 0; -GtkToolItemGroup-expander-size: 11; -GtkWidget-text-handle-width: 20; -GtkWidget-text-handle-height: 24; -GtkDialog-button-spacing: 4; -GtkDialog-action-area-border: 0; outline-color: alpha(currentColor,0.3); outline-style: dashed; outline-offset: -3px; outline-width: 1px; -gtk-outline-radius: 7px; -gtk-secondary-caret-color: @accent_bg_color; }
 
 .background { color: @window_fg_color; background-color: @window_bg_color; }
