--- a/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
+++ b/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
@@ -24,16 +24,16 @@
 
 @define-color headerbar_bg_color #1e1e20;   /* a step lighter */
 @define-color headerbar_fg_color #eeeeee;
-@define-color headerbar_border_color #555;  /* subtle border */
+@define-color headerbar_border_color #1e1e20;  /* subtle border */
 @define-color headerbar_backdrop_color #1e1e20;
-@define-color headerbar_shade_color RGB(0 0 6 / 30%);
-@define-color headerbar_darker_shade_color RGB(0 0 12 / 85%);
+@define-color headerbar_shade_color #1e1e20;
+@define-color headerbar_darker_shade_color #1e1e20;
 
-@define-color sidebar_bg_color #19191b;
+@define-color sidebar_bg_color #1e1e20;
 @define-color sidebar_fg_color #eeeeee;
 @define-color sidebar_backdrop_color #1f1f21;
-@define-color sidebar_shade_color RGB(0 0 6 / 20%);
-@define-color sidebar_border_color RGB(0 0 6 / 30%);
+@define-color sidebar_shade_color #3f4044;
+@define-color sidebar_border_color #3f4044;
 
 @define-color secondary_sidebar_bg_color #222224;
 @define-color secondary_sidebar_fg_color #eeeeee;
@@ -57,6 +57,10 @@
 
 @define-color shade_color RGB(0 0 6 / 20%);
 @define-color scrollbar_outline_color RGB(0 0 12 / 90%);
+
+* {
+    color: #eeeeee;
+}
 
 :root {
   --standalone-color-oklab: max(l, 0.85) a b;
