--- a/themes/.themes/Adwaita-Mono/gtk-4.0/gtk.css
+++ b/themes/.themes/Adwaita-Mono/gtk-4.0/gtk.css
@@ -8,6 +8,7 @@
 @define-color error_bg_color @red_4;
 @define-color error_fg_color white;
 @define-color accent_color oklab(from #5f7a8c max(l, 0.85) a b);
+@define-color accent_bg_color oklab(from #5f7a8c max(l, 0.85) a b);
 @define-color destructive_color oklab(from @destructive_bg_color max(l, 0.85) a b);
 @define-color success_color oklab(from @success_bg_color max(l, 0.85) a b);
 @define-color warning_color oklab(from @warning_bg_color max(l, 0.85) a b);
@@ -16,20 +17,20 @@
 @define-color window_fg_color white;
 @define-color view_bg_color #1e1e20;
 @define-color view_fg_color white;
-@define-color headerbar_bg_color #1e1e20;
+@define-color headerbar_bg_color #242426;
 @define-color headerbar_fg_color white;
-@define-color headerbar_border_color white;
+@define-color headerbar_border_color #3f4044;
 @define-color headerbar_backdrop_color #1e1e20;
 @define-color headerbar_shade_color RGB(0 0 6/36%);
 @define-color headerbar_darker_shade_color RGB(0 0 12/90%);
-@define-color sidebar_bg_color #1e1e20;
+@define-color sidebar_bg_color #242426;
 @define-color sidebar_fg_color white;
-@define-color sidebar_backdrop_color #1e1e20;
+@define-color sidebar_backdrop_color #242426;
 @define-color sidebar_shade_color RGB(0 0 6/25%);
 @define-color sidebar_border_color #3f4044;
-@define-color secondary_sidebar_bg_color #1e1e20;
+@define-color secondary_sidebar_bg_color #242426;
 @define-color secondary_sidebar_fg_color white;
-@define-color secondary_sidebar_backdrop_color #1e1e20;
+@define-color secondary_sidebar_backdrop_color #242426;
 @define-color secondary_sidebar_shade_color #3f4044;
 @define-color secondary_sidebar_border_color #3f4044;
 @define-color card_bg_color RGB(255 255 255/8%);
