--- a/themes/.themes/Adwaita-Mono/gtk-3.0/gtk.css
+++ b/themes/.themes/Adwaita-Mono/gtk-3.0/gtk.css
@@ -58,27 +58,27 @@
 @define-color error_bg_color @red_4;
 @define-color error_fg_color white;
 @define-color error_color #ff7b63;
-@define-color window_bg_color #1e1e20;
+@define-color window_bg_color #242426;
 @define-color window_fg_color white;
 @define-color view_bg_color #1e1e20;
 @define-color view_fg_color white;
-@define-color headerbar_bg_color #1e1e20;
+@define-color headerbar_bg_color #242426;
 @define-color headerbar_fg_color white;
 @define-color headerbar_border_color white;
 @define-color headerbar_backdrop_color @window_bg_color;
 @define-color headerbar_shade_color rgba(0, 0, 6, 0.36);
 @define-color headerbar_darker_shade_color rgba(0, 0, 6, 0.9);
-@define-color sidebar_bg_color #1e1e20;
+@define-color sidebar_bg_color #242426;
 @define-color sidebar_fg_color white;
-@define-color sidebar_backdrop_color #1f1f22;
+@define-color sidebar_backdrop_color #28282c;
 @define-color sidebar_shade_color rgba(0, 0, 6, 0.25);
 @define-color sidebar_border_color rgba(0, 0, 6, 0.36);
 @define-color card_bg_color rgba(255, 255, 255, 0.08);
 @define-color card_fg_color white;
 @define-color card_shade_color rgba(0, 0, 6, 0.36);
-@define-color dialog_bg_color #252527;
+@define-color dialog_bg_color #36363a;
 @define-color dialog_fg_color white;
-@define-color popover_bg_color #252527;
+@define-color popover_bg_color #36363a;
 @define-color popover_fg_color white;
 @define-color popover_shade_color rgba(0, 0, 6, 0.25);
 @define-color thumbnail_bg_color #39393d;
