--- a/themes/.themes/Adwaita-Mono/gtk-3.0/libadwaita-tweaks.css
+++ b/themes/.themes/Adwaita-Mono/gtk-3.0/libadwaita-tweaks.css
@@ -12,7 +12,7 @@ notebook > header {
 }
 
 :root {
-  --accent-blue: #3584e4;
+  --accent-blue: #1b82b3;
   --accent-teal: #2190a4;
   --accent-green: #3a944a;
   --accent-yellow: #c88800;
