--- a/themes/.themes/Adwaita-Mono/gtk-3.0/gtk.css
+++ b/themes/.themes/Adwaita-Mono/gtk-3.0/gtk.css
@@ -1,6 +1,6 @@
 @define-color blue_1 #99c1f1;
 @define-color blue_2 #62a0ea;
-@define-color blue_3 #3584e4;
+@define-color blue_3 #1b82b3;
 @define-color blue_4 #1c71d8;
 @define-color blue_5 #1a5fb4;
 @define-color green_1 #8ff0a4;
@@ -45,7 +45,7 @@
 @define-color dark_5 #000000;
 @define-color accent_bg_color @blue_3;
 @define-color accent_fg_color white;
-@define-color accent_color #78aeed;
+@define-color accent_color #1b82b3;
 @define-color destructive_bg_color @red_4;
 @define-color destructive_fg_color white;
 @define-color destructive_color #ff7b63;
@@ -58,17 +58,17 @@
 @define-color error_bg_color @red_4;
 @define-color error_fg_color white;
 @define-color error_color #ff7b63;
-@define-color window_bg_color #242426;
+@define-color window_bg_color #222224;
 @define-color window_fg_color white;
 @define-color view_bg_color #1e1e20;
 @define-color view_fg_color white;
-@define-color headerbar_bg_color #242426;
+@define-color headerbar_bg_color #222224;
 @define-color headerbar_fg_color white;
 @define-color headerbar_border_color white;
 @define-color headerbar_backdrop_color @window_bg_color;
 @define-color headerbar_shade_color rgba(0, 0, 6, 0.36);
 @define-color headerbar_darker_shade_color rgba(0, 0, 6, 0.9);
-@define-color sidebar_bg_color #242426;
+@define-color sidebar_bg_color #222224;
 @define-color sidebar_fg_color white;
 @define-color sidebar_backdrop_color #28282c;
 @define-color sidebar_shade_color rgba(0, 0, 6, 0.25);
@@ -76,9 +76,9 @@
 @define-color card_bg_color rgba(255, 255, 255, 0.08);
 @define-color card_fg_color white;
 @define-color card_shade_color rgba(0, 0, 6, 0.36);
-@define-color dialog_bg_color #36363a;
+@define-color dialog_bg_color #2a2a2c;
 @define-color dialog_fg_color white;
-@define-color popover_bg_color #36363a;
+@define-color popover_bg_color #2a2a2c;
 @define-color popover_fg_color white;
 @define-color popover_shade_color rgba(0, 0, 6, 0.25);
 @define-color thumbnail_bg_color #39393d;
