--- a/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
+++ b/themes/.themes/Adwaita-Mono/gtk-4.0/gtk-dark.css
@@ -7,8 +7,8 @@
 @define-color warning_fg_color RGB(0 0 0 / 80%);
 @define-color error_bg_color @red_4;
 @define-color error_fg_color white;
-@define-color accent_color oklab(from #5f7a8c max(l, 0.85) a b);
-@define-color accent_bg_color oklab(from #5f7a8c max(l, 0.85) a b);
+@define-color accent_color #1b82b3;
+@define-color accent_bg_color #1b82b3;
 @define-color destructive_color oklab(from @destructive_bg_color max(l, 0.85) a b);
 @define-color success_color oklab(from @success_bg_color max(l, 0.85) a b);
 @define-color warning_color oklab(from @warning_bg_color max(l, 0.85) a b);
@@ -17,28 +17,28 @@
 @define-color window_fg_color white;
 @define-color view_bg_color #1e1e20;
 @define-color view_fg_color white;
-@define-color headerbar_bg_color #242426;
+@define-color headerbar_bg_color #222224;
 @define-color headerbar_fg_color white;
 @define-color headerbar_border_color #3f4044;
 @define-color headerbar_backdrop_color #1e1e20;
 @define-color headerbar_shade_color RGB(0 0 6/36%);
 @define-color headerbar_darker_shade_color RGB(0 0 12/90%);
-@define-color sidebar_bg_color #242426;
+@define-color sidebar_bg_color #222224;
 @define-color sidebar_fg_color white;
-@define-color sidebar_backdrop_color #242426;
+@define-color sidebar_backdrop_color #222224;
 @define-color sidebar_shade_color RGB(0 0 6/25%);
 @define-color sidebar_border_color #3f4044;
-@define-color secondary_sidebar_bg_color #242426;
+@define-color secondary_sidebar_bg_color #222224;
 @define-color secondary_sidebar_fg_color white;
-@define-color secondary_sidebar_backdrop_color #242426;
+@define-color secondary_sidebar_backdrop_color #222224;
 @define-color secondary_sidebar_shade_color #3f4044;
 @define-color secondary_sidebar_border_color #3f4044;
 @define-color card_bg_color RGB(255 255 255/8%);
 @define-color card_fg_color white;
 @define-color card_shade_color RGB(0 0 6/36%);
-@define-color dialog_bg_color #1f1f22;
+@define-color dialog_bg_color #2a2a2c;
 @define-color dialog_fg_color white;
-@define-color popover_bg_color #1f1f22;
+@define-color popover_bg_color #2a2a2c;
 @define-color popover_fg_color white;
 @define-color popover_shade_color RGB(0 0 6/25%);
 @define-color thumbnail_bg_color #1e1e20;
@@ -60,7 +60,7 @@
     from var(--warning-bg-color) var(--standalone-color-oklab)
   ); --error-color: oklab(
     from var(--error-bg-color) var(--standalone-color-oklab)
-  ); --active-toggle-bg-color: rgb(255 255 255 / 20%); --active-toggle-fg-color: #ffffff; --overview-bg-color: #1f1f22; --overview-fg-color: #ffffff; }
+  ); --active-toggle-bg-color: rgb(255 255 255 / 20%); --active-toggle-fg-color: #ffffff; --overview-bg-color: #2a2a2c; --overview-fg-color: #ffffff; }
 
 @import '../gtk-3.0/libadwaita.css';
 @import '../gtk-3.0/libadwaita-tweaks.css';
